changed the default font and fixed the row of years of the curriculum

--- a/src/app/admin/components/admin/admin.component.css
+++ b/src/app/admin/components/admin/admin.component.css
@@ -17,8 +17,8 @@
 #toolbar-container .ql-font span[data-label="Arial"]::before {
   font-family: "Arial";
 }
-/* Set content font-families */
 
+/* Set content font-families */
 .ql-font-inconsolata {
   font-family: "Inconsolata";
 }
@@ -38,4 +38,4 @@
 .ql-font-monospace {
   font-family: "Monospace";
 }
-
+/*# sourceMappingURL=admin.component.css.map */
