--- a/src/app/forms/components/complaints/complaints.component.scss
+++ b/src/app/forms/components/complaints/complaints.component.scss
@@ -1,3 +1,4 @@
+div, h1 {font-family: var(--mainFont);}
 
 .noticiasHead{
     background-color: rgb(245, 245, 245);
@@ -6,9 +7,9 @@
     border-top:solid 0.1px rgb(226, 226, 226);
     border-bottom:solid 0.1px rgb(226, 226, 226);
 
-    
+
 }
 .h1Head{
     margin-left: 50px;
-   
+
 }
