--- a/src/app/home/components/news-card/news-card.component.scss
+++ b/src/app/home/components/news-card/news-card.component.scss
@@ -2,6 +2,8 @@
 //   width: 19rem;
 // }
 
+p, button {font-family: var(--mainFont);}
+
 .card-news {
   border: none;
   box-shadow:  0px 1px  10px rgba(0, 0, 0, 0.15);
