--- a/src/app/management/components/management/management.component.scss
+++ b/src/app/management/components/management/management.component.scss
@@ -1,3 +1,4 @@
+h1, p {font-family: var(--mainFont);}
 
 .managementHead{
     background-color: rgb(245, 245, 245);
@@ -6,9 +7,9 @@
     border-top:solid 0.1px rgb(226, 226, 226);
     border-bottom:solid 0.1px rgb(226, 226, 226);
 
-    
+
 }
 .h1Head{
     margin-left: 50px;
-   
+
 }
