--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,11 +1,13 @@
+h6, p, a {font-family: var(--mainFont);}
+
 .navbar{
   // margin-bottom: 3rem;
 }
 
 .logo{
-    height: 80px;
-    width: 80px;
-    margin-right: -20px;
+  height: 80px;
+  width: 80px;
+  margin-right: -20px;
 }
 
 .container__text-cemet{
