--- a/src/styles.css
+++ b/src/styles.css
@@ -1,20 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap");
 :root {
-  //fonts
   --mainFont: 'Josefin Sans', sans-serif;
   --normalSize: 16px;
   --h3: 1.75rem;
   --h5: 1.25rem;
-
-  // colors
   --maincolor: black;
   --header: white;
   --footer2: rgb(16, 85, 212);
 }
 
-html, body { height: 100%; }
-body { margin: 0;}
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+}
 
 .ql-font-mirza {
   font-family: "Mirza";
@@ -27,3 +29,4 @@ body { margin: 0;}
 .ql-font-roboto {
   font-family: "Roboto";
 }
+/*# sourceMappingURL=styles.css.map */
