the managment page has been complete

--- a/src/app/management/components/management/management.component.html
+++ b/src/app/management/components/management/management.component.html
@@ -1,5 +1,32 @@
 <div class="container-fluid managementHead">
     <div class="container-fluid">
-        <h1 class="h1Head">Directiva</h1>
+        <h1 class="h1Head">Directiva CEMET</h1>
     </div>
+</div>
+
+<div class="container-fluid cDirectiva">
+   <div class="container-fluid  row">
+    <div class="container-fluid col presi">
+        <img src="/assets/images/2.jpg">
+        <h5>Denisse Sanhueza</h5>
+        <p>Presidenta</p>
+        
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ipsum maxime amet delectus rerum omnis quaerat aperiam natus recusandae minus alias repudiandae, quisquam numquam. Sapiente, atque impedit! Libero, ratione quae.</p>
+        <p>e-mail: <a href="mailto:aquitucorreo@usach.cl" > denisseS@usach.cl</a></p>
+    </div>
+    <div class="container-fluid col secre">
+        <img src="/assets/images/3.jpg">
+        <h5>Javier rodriguez</h5>
+        <p>Secretario </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque aperiam qui, facilis dignissimos tempore reprehenderit aspernatur nisi possimus. Accusantium incidunt delectus, ex voluptatum dolorem soluta non quasi consequuntur iste velit!</p>
+        <p>e-mail:<a href="mailto:aquitucorreo@usach.cl"> javierRodriguez@usach.cl</a> </p>
+    </div>
+    <div class="container-fluid col teso">
+        <img src="/assets/images/4.jpg">
+        <h5>Daniela González</h5>
+        <p>Tesorera </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam enim ipsa cumque iste ut excepturi, consequatur a. Enim nam suscipit consequuntur sequi deserunt aliquid, assumenda deleniti nostrum ipsa, quo illum!</p>
+        <p>e-mail: <a href="mailto:aquitucorreo@usach.cl "> danielagonzalez@usach.cl</a></p>
+    </div>
+   </div>
 </div>
