--- a/src/app/management/components/management/management.component.scss
+++ b/src/app/management/components/management/management.component.scss
@@ -13,3 +13,15 @@ h1, p {font-family: var(--mainFont);}
     margin-left: 50px;
 
 }
+.cDirectiva{
+    margin-top: 100px;
+   
+}
+
+img{
+    width: 180px;
+    border-radius: 50%;
+}
+.col{
+    text-align: center;
+}
