--- a/src/app/malla/components/malla/malla.component.scss
+++ b/src/app/malla/components/malla/malla.component.scss
@@ -14,14 +14,37 @@ margin-bottom: 50px;
   width: 200px;
   height: 50px;
   border:none;
-  border-radius: 8px;
+  border-radius: 5px;
   transition:  all 200ms ease;
-  background-color: rgb(230, 230, 230);
+  background-color: rgb(255, 255, 255);
 
 }
-.btnCivil:hover,.btnCivilA:hover,.btnEjecucion:hover{
-background-color: #ccc;
+.btnCivil{
+  
+  
+  border:solid 0.5px rgb(255, 85, 85);
 }
+.btnCivil:hover{
+  color: rgb(255, 255, 255);
+  
+  background-color: rgb(250, 51, 51);
+}
+.btnCivilA{
+ 
+  border:solid 0.5px rgb(66, 122, 243);
+}
+.btnCivilA:hover{
+  background-color: rgb(44, 82, 112);
+  color: rgb(255, 255, 255);
+}
+.btnEjecucion{
+  border:solid 0.5px rgb(34, 41, 56);
+}
+.btnEjecucion:hover{
+  background-color: rgb(37, 124, 40);
+  color: rgb(255, 255, 255);
+}
+
 .header-malla {
   display: flex;
   list-style: none;
@@ -34,8 +57,8 @@ background-color: #ccc;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(126, 126, 126);
-  border: 1px solid rgb(0, 0, 0);
+  background-color: rgb(88, 140, 184);
+  border: 3px solid rgb(255, 255, 255);
   color: white;
 }
 
@@ -83,7 +106,7 @@ background-color: #ccc;
   font-size: 12px;
   padding: .25rem;
   
-  background-color: rgb(100, 100, 100);
+  background-color: rgb(98, 135, 136);
   :hover {
     font-weight: bold;
   }
