--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,10 +1,28 @@
+<div class="container-fluid noticiasHead">
+  <div class="container-fluid">
+      <h1 class="h1Head">Iniciar Sesión</h1>
+  </div>
+</div>
+
 <div class="container-fluid cajaForm">
-  <form [formGroup]="form" (ngSubmit)="login($event)" class="formLogin">
+  <form [formGroup]="form" (ngSubmit)="login($event)" class="formLogin needs-validation">
     <label for="email" class="lCorreo">Correo</label>
-    <input formControlName="email" class="form-control iUser" matInput type="email">
+    <input id="email" formControlName="email" class="form-control iUser" matInput type="email" [ngClass]="{ 'is-invalid': clicked && f['email'].errors}">
+    <div *ngIf="clicked && f['email'].errors" class="invalid-feedback">
+      <div *ngIf="f['email'].errors['required']">El email es obligatorio</div>
+      <div *ngIf="f['email'].errors['email']">Por favor, ingresa un Correo válido</div>
+    </div>
     <br>
     <label for="password" class="lPass">Contraseña</label>
-    <input formControlName="password" class="form-control iPass" matInput type="password">
-    <button [disabled]="form.invalid" mat-raised-button color="primary" class="buttonLogin" type="submit" [style.marginLeft.px] = 30>Login</button>
+    <input id="password" formControlName="password" class="form-control iPass" matInput type="password" [ngClass]="{ 'is-invalid': clicked && incorrect}" [ngClass]="{ 'is-invalid': clicked && f['password'].errors}">
+    <div *ngIf="clicked && f['password'].errors" class="invalid-feedback">
+      <div *ngIf="f['password'].errors['required']">El email es obligatorio</div>
+    </div>
+    <div *ngIf="clicked" class="invalid-feedback">
+      <div *ngIf="incorrect">La contraseña o el correo son incorrectos</div>
+    </div>
+    <div class="container-btn">
+      <button mat-raised-button color="primary" class="buttonLogin" type="submit">Login</button>
+    </div>
   </form>
 </div>
