--- a/src/app/auth/components/login/login.component.scss
+++ b/src/app/auth/components/login/login.component.scss
@@ -1,14 +1,28 @@
+h1, label, input, button, div {font-family: var(--mainFont);}
+
+.noticiasHead {
+  background-color: rgb(245, 245, 245);
+  height:100px;
+  padding-top: 30px;
+  border-top:solid 0.1px rgb(226, 226, 226);
+  border-bottom:solid 0.1px rgb(226, 226, 226);
+}
+
+.h1Head {
+  margin-left: 50px;
+}
 
 .cajaForm{
-    margin-top: 100px;
-    width: 400px;
-    height: 280px;
-    padding-top: 25px;
-    background-color: rgb(243, 243, 243);
-    border-radius: 8px;
-    border: solid 0.2px rgb(189, 189, 189);
-    margin-bottom: 400px;
+  margin-top: 4rem;
+  width: 400px;
+  height: 300px;
+  padding-top: 25px;
+  background-color: rgb(243, 243, 243);
+  border-radius: 8px;
+  border: solid 0.2px rgb(189, 189, 189);
+    // margin-bottom: 400px;
 }
+
 .iUser,.iPass{
     height: 50px;
 }
@@ -27,10 +41,16 @@
      transition:  all 200ms ease;
 
 }
+.container-btn {
+  display: flex;
+  justify-content: center;
+}
+
 .buttonLogin:hover{
     background-color: #538db4;
 }
+
 @media (max-width:625px){
-    .cajaForm{width: 300px;margin-bottom: 250px;}
+    .cajaForm{width: 90%; }
     .buttonLogin{width: 200px;}
 }
