--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -1,14 +1,14 @@
 <div class="container-fluid">
   <div class="container row justify-content-sm-center containernav">
 
-    <a routerLink="/home" routerLinkActive="active" class="col-sm conitem">
+    <a href="https://drive.google.com/drive/folders/1KKDmgafW2HtVvPuVooKIfa58JluJgrJN?usp=sharing" target="_blank" class="col-sm conitem">
       <p class="nombreseccion">Nube Papeo</p>
       <img class="img-fluid fotopng" src="/assets/icons/cloud.png" alt="Icono de Nube Papeo">
     </a>
 
     <div class="col-sm-auto hr2"></div>
 
-    <a routerLink="/home" routerLinkActive="active" class="col-sm conitem">
+    <a routerLink="/papeo" routerLinkActive="active" class="col-sm conitem">
       <p class="nombreseccion">Sube tu Papeo</p>
       <img class="img-fluid fotopng" src="/assets/icons/file.png" alt="Icono de Sube tu Papeo"/>
     </a>
