--- a/src/app/malla/components/malla/malla.component.scss
+++ b/src/app/malla/components/malla/malla.component.scss
@@ -2,41 +2,39 @@ button, li, div {font-family: var(--mainFont)}
 
 .container-malla {
   margin: 2rem 1.6rem 0;
-  border: 1px solid #ccc;
-  padding: 1rem;
+  // border: 1px solid #ccc;
+  // padding: 1rem;
 }
 
 .container-btns {
-
-margin-bottom: 50px;
+  margin-bottom: 1rem;
 }
-.btnCivil,.btnCivilA,.btnEjecucion{
+
+.btn-mallas{
   width: 200px;
   height: 50px;
   border:none;
   border-radius: 5px;
   transition:  all 200ms ease;
   background-color: rgb(255, 255, 255);
-
 }
+
 .btnCivil{
-  
-  
   border:solid 0.5px rgb(255, 85, 85);
 }
 .btnCivil:hover{
   color: rgb(255, 255, 255);
-  
   background-color: rgb(250, 51, 51);
 }
+
 .btnCivilA{
- 
   border:solid 0.5px rgb(66, 122, 243);
 }
 .btnCivilA:hover{
   background-color: rgb(44, 82, 112);
   color: rgb(255, 255, 255);
 }
+
 .btnEjecucion{
   border:solid 0.5px rgb(34, 41, 56);
 }
@@ -50,7 +48,7 @@ margin-bottom: 50px;
   list-style: none;
   margin: 0;
   padding: 0;
-  margin-bottom: 10px; 
+  margin-bottom: 10px;
 }
 
 .header-year {
@@ -68,8 +66,8 @@ margin-bottom: 50px;
   align-items: center;
   border: 1px solid #ccc;
   transition:  all 200ms ease;
-  
-  
+
+
 }
 .header-semester:hover{
   background-color:rgb(236, 236, 236) ;
@@ -85,17 +83,9 @@ margin-bottom: 50px;
 .column-ramos {
   display: flex;
   flex-flow: column wrap;
-  // height: 90%;
-  // width: 8.3%;
-  // flex-direction: column;
-  // flex-wrap: wrap;
-  // justify-content: flex-end;
-  // grid-template-rows: repeat(7, 1fr);
-  // grid-template-columns: repeat(12, 1fr);
 }
 
 .ramos {
-  // width: 12rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -105,14 +95,14 @@ margin-bottom: 50px;
   cursor: pointer;
   font-size: 12px;
   padding: .25rem;
-  
   background-color: rgb(98, 135, 136);
-  :hover {
-    font-weight: bold;
-  }
-  border: 5px solid rgb(255, 255, 255);
+  border: 1px solid rgb(255, 255, 255);
   transition:  all 200ms ease;
 }
 .ramos:hover{
   transform: translateY(-3%);
+}
+
+@media (max-width: 980px) {
+
 }
