fixed the mesh component to be able to make it responsive and progress was made on the complaint form

--- a/src/app/forms/components/contact/contact.component.scss
+++ b/src/app/forms/components/contact/contact.component.scss
@@ -6,8 +6,9 @@ div, h1, button, p {font-family: var(--mainFont);}
     margin-bottom: 30px
 }
 .cajaForm{
+  display: flex;
+  flex-direction: column;
   width: 800px;
-  height: 380px;
   padding-top: 2rem;
   background-color: rgb(243, 243, 243);
   border-radius: 8px;
