some bug fixed in malla page

--- a/src/app/malla/components/malla/malla.component.html
+++ b/src/app/malla/components/malla/malla.component.html
@@ -1,6 +1,6 @@
 <div class=" container-malla">
   <h1>Malla {{ nombreCarrera }}</h1>
-  <div class="container-btns d-flex justify-content-between">
+  <div class="container-btns row justify-content-between">
     <button class="btn-mallas btnCivil" (click)="changeRamosCarrera('civil2021')">Malla civil</button>
     <button class="btn-mallas btnCivilA" (click)="changeRamosCarrera('civil')">Malla civil antigua</button>
     <button class="btn-mallas btnEjecucion" (click)="changeRamosCarrera('ejecucion')">Malla ejecucion</button>
