--- a/src/app/malla/components/malla/malla.component.scss
+++ b/src/app/malla/components/malla/malla.component.scss
@@ -39,9 +39,11 @@ button, li, div {font-family: var(--mainFont)}
   border:solid 0.5px rgb(34, 41, 56);
 }
 .btnEjecucion:hover{
-  background-color: rgb(37, 124, 40);
+  background-color: rgb(49, 146, 52);
   color: rgb(255, 255, 255);
 }
+
+
 
 .header-malla {
   display: flex;
@@ -102,7 +104,7 @@ button, li, div {font-family: var(--mainFont)}
   font-size: 12px;
   padding: .25rem;
   background-color: rgb(98, 135, 136);
-  border: 1px solid rgb(255, 255, 255);
+  border: 2px solid rgb(255, 255, 255);
   transition:  all 200ms ease;
 }
 .ramos:hover{
@@ -122,6 +124,11 @@ button, li, div {font-family: var(--mainFont)}
 }
 
 @media (max-width: 575px) {
+  .btn-mallas{
+    width: 250px;
+    margin-left: 20%;
+    margin-bottom: 20px;
+  }
   .header-malla {display:none;}
   .container-ramos {
     justify-content: center;
