some changes made in create news page

--- a/src/app/forms/components/contact/contact.component.scss
+++ b/src/app/forms/components/contact/contact.component.scss
@@ -24,7 +24,7 @@ div, h1, button, p {font-family: var(--mainFont);}
   width: 110px;
   margin-left: auto;
   margin-right: auto;
-  justify-content: space-evenly;
+  justify-content: space-eveznly;
 }
 
 .icon-check {
