--- a/src/app/admin/components/admin/admin.component.scss
+++ b/src/app/admin/components/admin/admin.component.scss
@@ -39,3 +39,34 @@
   font-family: "Monospace";
 }
 
+.CCrearNoticia{
+  background-color: rgb(248, 248, 248);
+  max-width: 1000px;
+  height: 450px;
+  padding-top: 25px;
+  border: solid 0.5px rgb(218, 218, 218);
+  border-radius: 2px;
+  
+ 
+}
+
+.containerTCrearNoticia,.CcerrarSesion{
+  text-align: center;
+}
+.hrCrearNoticia{
+  margin-left: 20%;
+  margin-right: 20%;
+}
+.btnCerraS{
+  width: 150px;
+}
+#editor{
+  background-color: rgb(255, 255, 255);
+}
+.cBtn{
+  
+ 
+}
+.btnCrear{
+  width: 150px;
+}
