--- a/src/app/news/components/news/news.component.html
+++ b/src/app/news/components/news/news.component.html
@@ -1,14 +1,3 @@
-<div class="container-fluid noticia">
-  <div class="container-fluid row">
-      <div class="container-fluid containerNoticia">
-          <p class="fechaNoticia">{{ new.date }}</p>
-          <img class="img-fluid imgNoticia"  [src]="new.image" [alt]="new.title">
-      </div>
-      <div class="container-fluid infoNoticia">
-          <p class="title-new">{{ new.title }}</p>
-          <p class="contenidoNoticia">{{ new.description | slice:0:500 }}</p>
-      </div>
-      <hr class="hrNoticia">
-  </div>
-
+<div class="container mt-4">
+  <h1>Test</h1>
 </div>
