--- a/src/app/management/components/management/management.component.html
+++ b/src/app/management/components/management/management.component.html
@@ -4,29 +4,20 @@
     </div>
 </div>
 
+<div class="container container__btn-add" *ngIf="user">
+  <button class="btn btn-primary btn-add" routerLink="/admin/agregar-cargo">
+    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+      <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+    </svg>
+    <div class="text__btn-add">
+      Agregar nuevo cargo
+    </div>
+  </button>
+</div>
+
 <div class="container-fluid cDirectiva">
-   <div class="container-fluid  row">
-    <div class="container-fluid col presi">
-        <img src="/assets/images/2.jpg">
-        <h5>Denisse Sanhueza</h5>
-        <p>Presidenta</p>
-        
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ipsum maxime amet delectus rerum omnis quaerat aperiam natus recusandae minus alias repudiandae, quisquam numquam. Sapiente, atque impedit! Libero, ratione quae.</p>
-        <p>e-mail: <a href="mailto:aquitucorreo@usach.cl" > denisseS@usach.cl</a></p>
-    </div>
-    <div class="container-fluid col secre">
-        <img src="/assets/images/3.jpg">
-        <h5>Javier rodriguez</h5>
-        <p>Secretario </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque aperiam qui, facilis dignissimos tempore reprehenderit aspernatur nisi possimus. Accusantium incidunt delectus, ex voluptatum dolorem soluta non quasi consequuntur iste velit!</p>
-        <p>e-mail:<a href="mailto:aquitucorreo@usach.cl"> javierRodriguez@usach.cl</a> </p>
-    </div>
-    <div class="container-fluid col teso">
-        <img src="/assets/images/4.jpg">
-        <h5>Daniela González</h5>
-        <p>Tesorera </p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam enim ipsa cumque iste ut excepturi, consequatur a. Enim nam suscipit consequuntur sequi deserunt aliquid, assumenda deleniti nostrum ipsa, quo illum!</p>
-        <p>e-mail: <a href="mailto:aquitucorreo@usach.cl "> danielagonzalez@usach.cl</a></p>
-    </div>
-   </div>
+  <div class="container-fluid row">
+    <app-management-card class="container-fluid col" *ngFor="let position of positions; let i = index" [position]="position" [idDoc]="idDocs[i]" [user]="user">
+    </app-management-card>
+  </div>
 </div>
