--- a/src/app/management/components/management/management.component.scss
+++ b/src/app/management/components/management/management.component.scss
@@ -1,30 +1,38 @@
-h1, p {font-family: var(--mainFont);}
+h1, div {font-family: var(--mainFont);}
 
 .managementHead{
-    background-color: rgb(245, 245, 245);
-    height:100px;
-    padding-top: 30px;
-    border-top:solid 0.1px rgb(226, 226, 226);
-    border-bottom:solid 0.1px rgb(226, 226, 226);
-
-
+  background-color: rgb(245, 245, 245);
+  height:100px;
+  padding-top: 30px;
+  border-top:solid 0.1px rgb(226, 226, 226);
+  border-bottom:solid 0.1px rgb(226, 226, 226);
 }
+
 .h1Head{
-    margin-left: 50px;
-
+  margin-left: 50px;
 }
+
+.container__btn-add {
+  margin-top: 50px;
+}
+
+.btn-add {
+  display: flex;
+  justify-content: space-between;
+}
+
+.text__btn-add {
+  margin-top: 3px;
+}
+
 .cDirectiva{
-    margin-top: 100px;
-   
+  margin-top: 100px;
 }
 
-img{
-    width: 180px;
-    border-radius: 50%;
-}
 .col{
-    text-align: center;
+  text-align: center;
 }
+
 @media (max-width:980px){
-    .col{padding-left:40px;}
+  .col{padding-left:40px;}
 }
