--- a/src/app/forms/components/complaints/complaints.component.scss
+++ b/src/app/forms/components/complaints/complaints.component.scss
@@ -28,6 +28,10 @@ div, h1 {font-family: var(--mainFont);}
   margin-bottom: 1rem;
 }
 
+// .input-radio {
+//   display: flex;
+// }
+
 .container-success {
   display: flex;
   width: 110px;
