--- a/src/app/home/components/news-card/news-card.component.html
+++ b/src/app/home/components/news-card/news-card.component.html
@@ -2,10 +2,10 @@
   <img [src]="image" [alt]="new.title" class="card-img-top" >
   <div class="card-body ">
 
-    <div class="badges mb-2" *ngFor="let category of new.categories">
-      <span class="badge bg-primary me-2">{{ category }}</span>
+    <div class="badges mb-2">
+      <span class="badge bg-primary me-2">{{ new.categories }}</span>
     </div>
-
+    <h5>{{ new.title }}</h5>
     <p class="card-text">{{ new.body | slice:0:100 }}</p>
     <div class="container-btn">
       <button type="button" class="btn btn-outline-success" [routerLink]="['/noticias', idDoc]" [state]="{data: {'image': '1'}}">Ver más</button>
