--- a/src/app/news/components/news-card/news-card.component.scss
+++ b/src/app/news/components/news-card/news-card.component.scss
@@ -48,10 +48,10 @@ p { font-family: var(--mainFont); }
 }
 
 .contenidoNoticia{
-    margin-top: 40px;
-    text-align: left;
-
+  margin-top: 40px;
+  text-align: justify;
 }
+
 .hrNoticia{
     margin-top: 45px;
     width:900px;
