--- a/src/app/admin/components/add-position/add-position.component.html
+++ b/src/app/admin/components/add-position/add-position.component.html
@@ -1,3 +1,6 @@
+<div class="container-fluid container__logout" *ngIf="user">
+  <button class="btn btn-outline-primary btnCerraS" (click)="logout()">Cerrar Sesión</button>
+</div>
 
 <div class="container-fluid mt-3">
   <div class="container-fluid containerTCrearNoticia">
