--- a/src/app/admin/components/create-new/create-new.component.html
+++ b/src/app/admin/components/create-new/create-new.component.html
@@ -1,5 +1,8 @@
+<div class="container-fluid container__logout" *ngIf="user">
+  <button class="btn btn-outline-primary btnCerraS" (click)="logout()">Cerrar Sesión</button>
+</div>
 
-<div class="container-fluid ">
+<div class="container-fluid mt-4">
   <div class="container-fluid containerTCrearNoticia">
     <h1 class="TCnoticia">Crear Noticia</h1>
     <hr class="hrCrearNoticia">
@@ -7,13 +10,17 @@
 </div>
 
 <div class="container-fluid CCrearNoticia position-relative">
-  <form [formGroup]="form" class="container-fluid form-group" (ngSubmit)="test(form.value)">
+  <form [formGroup]="form" class="container-fluid form-group" (ngSubmit)="createNew(form.value)">
     <div class="mb-1">
-      <label for="LnNoticia">Titulo de la Noticia</label>
-      <input type="text" formControlName="title" class="form-control" placeholder="Nombre">
+      <label for="title">Titulo de la Noticia</label>
+      <input id="title" type="text" formControlName="title" class="form-control" placeholder="Titulo" [ngClass]="{ 'is-invalid': clicked && f['title'].errors}">
+      <div *ngIf="clicked && f['title'].errors" class="invalid-feedback">
+        <div *ngIf="f['title'].errors['required']">El titulo de la noticia es obligatorio</div>
+        <div *ngIf="f['title'].errors['minlength']">Por favor, el titulo de la noticia debe ser más largo</div>
+      </div>
     </div>
 
-    <div class="mb-1">
+    <!-- <div class="mb-1">
       <label for="lDropdown">Tipo de noticia</label>
       <div mdbDropdown class="dropdown">
         <button mdbDropdownToggle #dropdown class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
@@ -26,23 +33,32 @@
           <li><a class="dropdown-item">Herramienta</a></li>
         </ul>
       </div>
-    </div>
-
-    <!-- <div class="mb-1 container__div-category">
-      <label for="category">Categoría de la Noticia</label>
-      <div class="container__input-category col-12">
-        <input type="text" class="form-control input__add-category" placeholder="Noticia, Evento, Comunicado Oficial, etc.">
-        <button class="btn btn-primary" (click)="addNewCategory()">+</button>
-      </div>
     </div> -->
 
-    <div class="mb-1">
-      <label for="formFileSm" class="form-label">Seleccionar Imagen</label>
-      <input class="form-control form-control-sm" id="formFileSm" type="file">
+    <div class="mb-1 container__div-category">
+      <label for="category">Categoría de la Noticia</label>
+      <input id="category" formControlName="category" type="text" class="form-control" placeholder="Noticia, Evento, Comunicado Oficial, etc." [ngClass]="{ 'is-invalid': clicked && f['category'].errors}">
+      <!-- <button class="btn btn-primary" (click)="addNewCategory()">+</button> -->
+      <div *ngIf="clicked && f['category'].errors" class="invalid-feedback">
+        <div *ngIf="f['category'].errors['required']">La categoría de la noticia es obligatoria</div>
+      </div>
     </div>
 
-    <label for="LcontenidoNoticia">Contenido</label>
-    <div [(ngmodel)]="content" [styles]="editorStyle" id="editor" trackChanges="all" placeholder="Texto"></div>
+    <div class="mb-1">
+      <label for="image" class="form-label">Seleccionar Imagen</label>
+      <br>
+      <img *ngIf="(image$ | async) as image" [src]="image" [alt]="name$" height="200px" width="200px">
+      <input id="image" type="file" class="form-control form-control-sm" (change)="uploadFile($event)">
+    </div>
+
+    <label for="editor">Contenido</label>
+    <div [(ngmodel)]="content" class="form-control form-control-sm" [styles]="editorStyle" id="editor"
+              trackChanges="all" placeholder="Noticia" [ngClass]="{ 'is-invalid': clicked && error}">
+    </div>
+    <div *ngIf="clicked && error" class="invalid-feedback">
+      <div *ngIf="errorRequired">El contenido de la noticia es obligatorio</div>
+      <div *ngIf="errorMinLength">El contenido de la noticia tiene que ser más largo</div>
+    </div>
     <!-- <textarea name="" id="" cols="30" rows="10">Texto</textarea> -->
 
     <!-- <quill-editor [(ngModel)]="content" trackChanges="all" [modules]="modules" (onEditorCreated)="addBindingCreated($event)"></quill-editor> -->
@@ -52,16 +68,5 @@
     </div>
   </form>
 </div>
-
-
-
-<div class="container-fluid CcerrarSesion">
-  <hr class="hrCrearNoticia">
-  <button class="btn btn-outline-primary btnCerraS" (click)="logout()">Cerrar Sesión</button>
-  <div id="quill" class="container">
-    <p>Content *</p>
-  </div>
-</div>
-
 
 <div id="text"></div>
