--- a/src/app/admin/components/create-new/create-new.component.scss
+++ b/src/app/admin/components/create-new/create-new.component.scss
@@ -1,44 +1,9 @@
 h1, label, input, a, button, p {font-family: var(--mainFont);}
 
-#toolbar-container .ql-font span[data-label="Sans Serif"]::before {
-  font-family: "Sans Serif";
-}
-
-#toolbar-container .ql-font span[data-label="Inconsolata"]::before {
-  font-family: "Inconsolata";
-}
-
-#toolbar-container .ql-font span[data-label="Roboto"]::before {
-  font-family: "Roboto";
-}
-
-#toolbar-container .ql-font span[data-label="Mirza"]::before {
-  font-family: "Mirza";
-}
-
-#toolbar-container .ql-font span[data-label="Arial"]::before {
-  font-family: "Arial";
-}
-/* Set content font-families */
-
-.ql-font-inconsolata {
-  font-family: "Inconsolata";
-}
-
-.ql-font-roboto {
-  font-family: "Roboto";
-}
-
-.ql-font-mirza {
-  font-family: "Mirza";
-}
-
-.ql-font-arial {
-  font-family: "Arial";
-}
-
-.ql-font-monospace {
-  font-family: "Monospace";
+.container__logout {
+  display: flex;
+  justify-content: flex-end;
+  margin: 1rem 1rem 0 0;
 }
 
 .CCrearNoticia{
@@ -52,7 +17,7 @@ h1, label, input, a, button, p {font-family: var(--mainFont);}
   border-radius: 2px;
 }
 
-.containerTCrearNoticia, .CcerrarSesion{
+.containerTCrearNoticia{
   text-align: center;
 }
 .hrCrearNoticia{
