--- a/src/app/admin/components/edit-position/edit-position.component.html
+++ b/src/app/admin/components/edit-position/edit-position.component.html
@@ -1,3 +1,6 @@
+<div class="container-fluid container__logout" *ngIf="user">
+  <button class="btn btn-outline-primary btnCerraS" (click)="logout()">Cerrar Sesión</button>
+</div>
 
 <div class="container-fluid mt-3">
   <div class="container-fluid containerTCrearNoticia">
@@ -12,7 +15,7 @@
       <label for="name">Nombre</label>
       <input id="name" type="text" [value]="position.name" formControlName="name" class="form-control" placeholder="Nombre" [ngClass]="{ 'is-invalid': clicked && f['name'].errors}">
       <div *ngIf="clicked && f['name'].errors" class="invalid-feedback">
-        <div *ngIf="f['name'].errors['required']">El nombre y apellido es obligatorio</div>
+        <div *ngIf="f['name'].errors['required']">Por favor edita este campo, aunque sea para dejarlo igual</div>
         <div *ngIf="f['name'].errors['minlength']">Por favor, ingresa tu nombre y apellido</div>
       </div>
     </div>
@@ -21,7 +24,7 @@
       <label for="position">Posición</label>
       <input id="position" type="text" [value]="position.position" formControlName="position" class="form-control" placeholder="Posición" [ngClass]="{ 'is-invalid': clicked && f['position'].errors}">
       <div *ngIf="clicked && f['position'].errors" class="invalid-feedback">
-        <div *ngIf="f['position'].errors['required']">La posición es obligatoria</div>
+        <div *ngIf="f['position'].errors['required']">Por favor edita este campo, aunque sea para dejarlo igual</div>
         <div *ngIf="f['position'].errors['minlength']">Por favor, ingresa una posición válida</div>
       </div>
     </div>
@@ -30,14 +33,15 @@
       <label for="email">Correo Electrónico</label>
       <input id="email" type="text" [value]="position.email" formControlName="email" class="form-control" placeholder="ejemplo@usach.cl" [ngClass]="{ 'is-invalid': clicked && f['position'].errors}">
       <div *ngIf="clicked && f['email'].errors" class="invalid-feedback">
-        <div *ngIf="f['email'].errors['minlength']">Por favor, ingresa un correo USACH válido</div>
+        <div *ngIf="f['email'].errors['pattern']">Por favor, ingresa un correo USACH válido</div>
       </div>
     </div>
 
     <div class="mb-1">
       <label for="image" class="form-label">Seleccionar Imagen</label>
       <br>
-      <img *ngIf="(image$ | async) as image" [src]="image" [alt]="name$" height="200px" width="200px">
+      <img *ngIf="have" [src]="image" [alt]="position.image" height="200px" width="200px">
+      <img *ngIf="(image$ | async) as url" [src]="url" [alt]="position.image" height="200px" width="200px">
       <input id="image" type="file" class="form-control form-control-sm" (change)="uploadFile($event)">
     </div>
 
@@ -45,7 +49,7 @@
       <label for="details">Detalles</label>
       <textarea id="details" [value]="position.details" class="form-control" formControlName="details" placeholder="Carrera, año, etc." [ngClass]="{ 'is-invalid': clicked && f['details'].errors}"></textarea>
       <div *ngIf="clicked && f['details'].errors" class="invalid-feedback">
-        <div *ngIf="f['details'].errors['required']">La descripción de la persona es obligatoria</div>
+        <div *ngIf="f['details'].errors['required']">Por favor editar este campo, aunque sea para dejarlo igual</div>
         <div *ngIf="f['details'].errors['minlength']">Por favor, ingresa una descripción más larga</div>
       </div>
     </div>
