--- a/src/app/management/components/management/management.component.scss
+++ b/src/app/management/components/management/management.component.scss
@@ -4,6 +4,7 @@ h1, div {font-family: var(--mainFont);}
   background-color: rgb(245, 245, 245);
   height:100px;
   padding-top: 30px;
+  margin-bottom: 4rem;
   border-top:solid 0.1px rgb(226, 226, 226);
   border-bottom:solid 0.1px rgb(226, 226, 226);
 }
@@ -13,7 +14,8 @@ h1, div {font-family: var(--mainFont);}
 }
 
 .container__btn-add {
-  margin-top: 50px;
+  // margin-top: 3rem;
+  margin-bottom: 4rem;
 }
 
 .btn-add {
@@ -26,7 +28,7 @@ h1, div {font-family: var(--mainFont);}
 }
 
 .cDirectiva{
-  margin-top: 100px;
+  // margin-top: 100px;
 }
 
 .col{
