--- a/src/app/news/components/news-page/news-page.component.html
+++ b/src/app/news/components/news-page/news-page.component.html
@@ -1,10 +1,12 @@
 <div class="container-fluid noticiasHead">
     <div class="container-fluid">
-        <h1 class="h1Head">Noticias USACH</h1>
+        <h1 class="h1Head">Noticias CEMET</h1>
     </div>
 </div>
 
-<div></div>
+<div class="container-fluid container__logout" *ngIf="user">
+  <button class="btn btn-outline-primary btnCerraS" (click)="logout()">Cerrar Sesión</button>
+</div>
 
 <div class="container container-cards">
   <app-news-card
