added button of delete new in home and added meta tag and redirect link

--- a/src/app/home/components/news-card/news-card.component.scss
+++ b/src/app/home/components/news-card/news-card.component.scss
@@ -37,10 +37,10 @@ p, button {font-family: var(--mainFont);}
   color: rgb(92, 92, 92);
 }
 
-.container-btn {
+.container-btns {
   display: flex;
   justify-content: space-between;
-  width: 150px;
+  width: 70%;
   height: 38px;
 }
 
